Changelog
=========

1.0 (2011-01-24)
----------------

- Check if the current user has configured an e-mail address for the email 
  notification option. This fixes http://dev.plone.org/plone/ticket/11428.
  [timo]  


1.0RC2 (2011-01-24)
-------------------

- Remove moderation_enabled setting from registry to avoid migration problems
  to 1.0RC1. This fixes http://dev.plone.org/plone/ticket/11419.
  [timo]


1.0RC1 (2011-01-22)
-------------------

- Always show existing comments, even if commenting is disabled. 
  [timo]
  
- Fix CSS for commenter images with a width of more than 2.5em. This fixes 
  http://dev.plone.org/plone/ticket/11391.
  [timo]

- Show a 'Comments are moderated.' message next to the comment form if comments
  are moderated. 
  [timo]
  
- Make sure plone.app.registry's ZCML is loaded, so that its import step will run
  when plone.app.discussion is installed.
  [davisagli]

- Avoid sending multiple notification emails to the same person when
  he has commented multiple times.
  [maurits]
  
- Move discussion action item from actionicons.xml to actions.xml to avoid 
  deprecation warning.
  [timo]
  
- Fix cancel button on edit view when using Dexterity types. This fixes 
  http://dev.plone.org/plone/ticket/11338.
  [EpeliJYU]
  
- Assigning the 'Reply to item' permission to the 'Authenticated' role. The old
  commenting system allowed 'Authenticated' users to post comments. Also, OpenID
  users do not possess the 'Authenticated' role.
  [timo]

- Make sure the handleComment method checks for the 'Reply to item' permission 
  when adding a comment.
  [timo]

- Make the mail-setting warning message show up in the discussion control panel.
  [timo]
  
- Link directly to the "Discussion Item" types control panel in the moderation
  view.
  [timo]

- Show "moderate comments" link in the admin panel only if a moderation 
  workflow is enabled for comments.
  [timo]

- Do not allow to change the mail settings in the discussion control panel, if 